--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Qscrum.github.io</h1>
-            <h2>QScrum Home</h2>
+            <h2>Minimize</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
